# chess-client

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.CE019A4EE490D93E.idx  stdinc.hpp.DE2EE773AD1F47A9.idx
Assets/Text/: adj.txt  nouns.txt
inc/: animation.hpp  assetmanager.hpp  canvas.hpp  chessboard.hpp  chesspiece.hpp  cursor.hpp  eventsystem.hpp  game.hpp  gamescene.hpp  logger.hpp  math.hpp  menu.hpp  message.hpp  networkclient.hpp  networkplayer.hpp  state.hpp  stdinc.hpp  widgets.hpp
src/: animation.cpp  assetmanager.cpp  canvas.cpp  chessboard.cpp  eventsystem.cpp  game.cpp  gamescene.cpp  logger.cpp  main.cpp  math.cpp  menu.cpp  message.cpp  networkclient.cpp  networkplayer.cpp  prefs.cpp  state.cpp  widgets.cpp
